k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloudmart-prod
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        instrumentation.opentelemetry.io/inject-java: "false"
        instrumentation.opentelemetry.io/inject-nodejs: "false"
        instrumentation.opentelemetry.io/inject-python: "false"
        instrumentation.opentelemetry.io/inject-dotnet: "false"
        cloudwatch.aws.amazon.com/auto-annotate-java: "false"
        cloudwatch.aws.amazon.com/auto-annotate-nodejs: "false"
        cloudwatch.aws.amazon.com/auto-annotate-python: "false"
        cloudwatch.aws.amazon.com/auto-annotate-dotnet: "false"
    spec:
      containers:
      - name: frontend
        image: <YOUR_REGISTRY>/frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudmart-prod
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudmart-ingress
  namespace: cloudmart-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/subnets: subnet-064dd3318ad0c5b3a,subnet-0e96fde77f4dbbb00
    alb.ingress.kubernetes.io/security-groups: sg-037da6edf934c270d
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
